backend/boot_error_ascii.log
node : file:///C:/User
s/MOULIKA/Downloads/Al
lTogether/eCom_Final/b
ackend/server.js:7
At line:1 char:1
+ node server.js > 
boot_error.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (file:///C:   
 /User...end/serve    
r.js:7:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
import routes from './
src/routes/index.js';
       ^^^^^^
SyntaxError: The 
requested module './sr
c/routes/index.js' 
does not provide an 
export named 'default'
    at ModuleJob._inst
antiate (node:internal
/modules/esm/module_jo
b:180:21)
    at async 
ModuleJob.run (node:in
ternal/modules/esm/mod
ule_job:263:5)
    at async onImport.
tracePromise.__proto__
 (node:internal/module
s/esm/loader:547:26)
    at async asyncRunE
ntryPointWithESMLoader
 (node:internal/module
s/run_main:116:5)

Node.js v22.12.0
